[options.entry_points]
console_scripts =
  lplot = lplot.main:main

# Following the instruction within versioneer.py
# https://github.com/python-versioneer/python-versioneer
[versioneer]
VCS = git
style = pep440
versionfile_source = lplot/_version.py
versionfile_build = lplot/_version.py
tag_prefix = v
parentdir_prefix = lplot-
